; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_Dp_setMinutes.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_Dp_setMinutes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @Dp_setMinutes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Dp_setMinutes(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca double, align 8
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  %7 = alloca double, align 8
  store i32* %0, i32** %2, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @js_todate(i32* %8, i32 0)
  %10 = call double @LocalTime(i32 %9)
  store double %10, double* %3, align 8
  %11 = load double, double* %3, align 8
  %12 = call double @HourFromTime(double %11)
  store double %12, double* %4, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = call double @js_tonumber(i32* %13, i32 1)
  store double %14, double* %5, align 8
  %15 = load i32*, i32** %2, align 8
  %16 = load double, double* %3, align 8
  %17 = call i32 @SecFromTime(double %16)
  %18 = call double @js_optnumber(i32* %15, i32 2, i32 %17)
  store double %18, double* %6, align 8
  %19 = load i32*, i32** %2, align 8
  %20 = load double, double* %3, align 8
  %21 = call i32 @msFromTime(double %20)
  %22 = call double @js_optnumber(i32* %19, i32 3, i32 %21)
  store double %22, double* %7, align 8
  %23 = load i32*, i32** %2, align 8
  %24 = load double, double* %3, align 8
  %25 = call i32 @Day(double %24)
  %26 = load double, double* %4, align 8
  %27 = load double, double* %5, align 8
  %28 = load double, double* %6, align 8
  %29 = load double, double* %7, align 8
  %30 = call i32 @MakeTime(double %26, double %27, double %28, double %29)
  %31 = call i32 @MakeDate(i32 %25, i32 %30)
  %32 = call i32 @UTC(i32 %31)
  %33 = call i32 @js_setdate(i32* %23, i32 0, i32 %32)
  ret void
}

declare dso_local double @LocalTime(i32) #1

declare dso_local i32 @js_todate(i32*, i32) #1

declare dso_local double @HourFromTime(double) #1

declare dso_local double @js_tonumber(i32*, i32) #1

declare dso_local double @js_optnumber(i32*, i32, i32) #1

declare dso_local i32 @SecFromTime(double) #1

declare dso_local i32 @msFromTime(double) #1

declare dso_local i32 @js_setdate(i32*, i32, i32) #1

declare dso_local i32 @UTC(i32) #1

declare dso_local i32 @MakeDate(i32, i32) #1

declare dso_local i32 @Day(double) #1

declare dso_local i32 @MakeTime(double, double, double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
